--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -38,7 +38,7 @@
     <item row="1" column="1">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -73,11 +73,14 @@
         <item>
          <widget class="QGroupBox" name="groupBox">
           <property name="title">
-           <string>Defaults</string>
+           <string>New images defaults</string>
           </property>
           <layout class="QGridLayout" name="gridLayout">
            <item row="1" column="3">
             <widget class="QLineEdit" name="scaleX">
+             <property name="toolTip">
+              <string>scale x</string>
+             </property>
              <property name="text">
               <string>1</string>
              </property>
@@ -88,6 +91,9 @@
            </item>
            <item row="1" column="5">
             <widget class="QToolButton" name="getScale">
+             <property name="toolTip">
+              <string>get scale from current image</string>
+             </property>
              <property name="text">
               <string>...</string>
              </property>
@@ -99,6 +105,9 @@
            </item>
            <item row="1" column="4">
             <widget class="QLineEdit" name="scaleY">
+             <property name="toolTip">
+              <string>scale y</string>
+             </property>
              <property name="text">
               <string>1</string>
              </property>
@@ -109,6 +118,9 @@
            </item>
            <item row="0" column="4">
             <widget class="QLineEdit" name="originY">
+             <property name="toolTip">
+              <string>origin y</string>
+             </property>
              <property name="text">
               <string>0</string>
              </property>
@@ -119,6 +131,9 @@
            </item>
            <item row="0" column="3">
             <widget class="QLineEdit" name="originX">
+             <property name="toolTip">
+              <string>origin x</string>
+             </property>
              <property name="text">
               <string>0</string>
              </property>
@@ -153,6 +168,9 @@
            </item>
            <item row="0" column="5">
             <widget class="QToolButton" name="getOrigin">
+             <property name="toolTip">
+              <string>get origin from current image</string>
+             </property>
              <property name="text">
               <string>...</string>
              </property>
@@ -164,6 +182,9 @@
            </item>
            <item row="0" column="2">
             <widget class="QToolButton" name="lockOrigin">
+             <property name="toolTip">
+              <string>lock origin forn newly opened images</string>
+             </property>
              <property name="text">
               <string>...</string>
              </property>
@@ -182,6 +203,9 @@
            </item>
            <item row="1" column="2">
             <widget class="QToolButton" name="lockScale">
+             <property name="toolTip">
+              <string>lock scale forn newly opened images</string>
+             </property>
              <property name="text">
               <string>...</string>
              </property>
