--- a/plugins/Properties/Properties.ui
+++ b/plugins/Properties/Properties.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>nPhysProperties</class>
- <widget class="QMainWindow" name="nPhysProperties">
+ <class>Properties</class>
+ <widget class="QMainWindow" name="Properties">
   <property name="geometry">
    <rect>
     <x>0</x>
