--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -98,7 +98,6 @@
     <addaction name="actionOpen_Glob"/>
     <addaction name="menuOpen_Recent"/>
     <addaction name="actionPlugin"/>
-    <addaction name="actionKeyboard_shortcut"/>
     <addaction name="separator"/>
     <addaction name="actionReopen_to_saved"/>
     <addaction name="actionSave"/>
@@ -194,12 +193,8 @@
     <property name="title">
      <string>Window</string>
     </property>
-    <widget class="QMenu" name="menuOthers">
-     <property name="title">
-      <string>Others</string>
-     </property>
-    </widget>
-    <addaction name="menuOthers"/>
+    <addaction name="actionKeyboard_shortcut"/>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuImage"/>
@@ -629,7 +624,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -642,7 +637,7 @@
   </action>
   <action name="actionPlugin">
    <property name="icon">
-    <iconset>
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/plugin.png</normaloff>:/icons/plugin.png</iconset>
    </property>
    <property name="text">
@@ -664,7 +659,7 @@
   </action>
   <action name="actionTranspose">
    <property name="icon">
-    <iconset>
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
    </property>
    <property name="text">
