--- a/plugins/Colorscale/Colorscale.ui
+++ b/plugins/Colorscale/Colorscale.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>474</width>
-    <height>374</height>
+    <height>379</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,13 +47,13 @@
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
         <string>Colorbar</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,0">
+       <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,0">
         <property name="leftMargin">
          <number>4</number>
         </property>
@@ -67,24 +67,6 @@
          <number>4</number>
         </property>
         <item row="0" column="0">
-         <widget class="QWidget" name="widget_3" native="true">
-          <layout class="QGridLayout" name="gridLayout_8" columnstretch="0">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
-          </layout>
-         </widget>
-        </item>
-        <item row="1" column="0">
          <widget class="nHistogram" name="histogram" native="true">
           <property name="minimumSize">
            <size>
@@ -108,7 +90,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="1" column="0">
          <widget class="QWidget" name="widget" native="true">
           <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0,0,0,0,0">
            <property name="leftMargin">
@@ -269,7 +251,7 @@
       </widget>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
-        <string>Palette files</string>
+        <string>Palettes</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_9" columnstretch="1,1,0">
         <property name="leftMargin">
@@ -428,7 +410,7 @@
   <customwidget>
    <class>nHistogram</class>
    <extends>QWidget</extends>
-   <header>nHistogram.h</header>
+   <header location="global">nHistogram.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
