--- a/plugins/Thomson_Parabola/Thomson_Parabola.ui
+++ b/plugins/Thomson_Parabola/Thomson_Parabola.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>713</width>
-    <height>545</height>
+    <width>672</width>
+    <height>566</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -179,18 +179,6 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QCheckBox" name="escale_cb">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>scale to protons</string>
-             </property>
-            </widget>
-           </item>
            <item row="3" column="0">
             <spacer name="verticalSpacer_5">
              <property name="orientation">
@@ -203,6 +191,18 @@
               </size>
              </property>
             </spacer>
+           </item>
+           <item row="2" column="0" colspan="2">
+            <widget class="QCheckBox" name="escale_cb">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>scale to protons</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -227,6 +227,11 @@
           </item>
           <item row="0" column="3">
            <widget class="QPushButton" name="addTrack_pb">
+            <property name="font">
+             <font>
+              <pointsize>10</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string>Add track</string>
             </property>
@@ -234,6 +239,11 @@
           </item>
           <item row="0" column="1">
            <widget class="QLabel" name="label">
+            <property name="font">
+             <font>
+              <pointsize>10</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string>Points</string>
             </property>
@@ -324,61 +334,18 @@
           <property name="title">
            <string>Simulation Box</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_5">
-           <item row="0" column="2">
-            <spacer name="horizontalSpacer_2">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="1" column="1">
-            <widget class="QVecInput" name="boxV2">
-             <property name="maximumSize">
-              <size>
-               <width>200</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="font">
-              <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
-              </font>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
+          <layout class="QFormLayout" name="formLayout">
            <item row="0" column="0">
             <widget class="QLabel" name="label_4">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
              <property name="text">
               <string>Vertex 1</string>
              </property>
             </widget>
-           </item>
-           <item row="2" column="0">
-            <spacer name="verticalSpacer">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
            </item>
            <item row="0" column="1">
             <widget class="QVecInput" name="boxV1">
@@ -390,8 +357,7 @@
              </property>
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="inputMask">
@@ -416,8 +382,34 @@
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_5">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
              <property name="text">
               <string>Vertex 2</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QVecInput" name="boxV2">
+             <property name="maximumSize">
+              <size>
+               <width>200</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -429,26 +421,18 @@
           <property name="title">
            <string>B field</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_6">
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_6">
+          <layout class="QFormLayout" name="formLayout_3">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_7">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
              <property name="text">
-              <string>Box</string>
+              <string>Center</string>
              </property>
             </widget>
-           </item>
-           <item row="3" column="1">
-            <spacer name="verticalSpacer_2">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
            </item>
            <item row="0" column="1">
             <widget class="QVecInput" name="Bcenter">
@@ -460,8 +444,7 @@
              </property>
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
@@ -472,30 +455,15 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_7">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_6">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
              <property name="text">
-              <string>Center</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <spacer name="horizontalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_8">
-             <property name="text">
-              <string>Vec</string>
+              <string>Box</string>
              </property>
             </widget>
            </item>
@@ -509,8 +477,7 @@
              </property>
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
@@ -518,6 +485,18 @@
              </property>
              <property name="neutrinoSave" stdset="0">
               <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_8">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Vec</string>
              </property>
             </widget>
            </item>
@@ -531,8 +510,7 @@
              </property>
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
@@ -551,39 +529,16 @@
           <property name="title">
            <string>E field</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_7">
-           <item row="3" column="1">
-            <spacer name="verticalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="2" column="1">
-            <widget class="QVecInput" name="Evec">
-             <property name="maximumSize">
-              <size>
-               <width>200</width>
-               <height>16777215</height>
-              </size>
-             </property>
+          <layout class="QFormLayout" name="formLayout_2">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_11">
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
-              <string/>
-             </property>
-             <property name="neutrinoSave" stdset="0">
-              <bool>true</bool>
+              <string>Center</string>
              </property>
             </widget>
            </item>
@@ -597,8 +552,7 @@
              </property>
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
@@ -611,6 +565,11 @@
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_10">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
              <property name="text">
               <string>Box</string>
              </property>
@@ -626,8 +585,7 @@
              </property>
              <property name="font">
               <font>
-               <pointsize>8</pointsize>
-               <italic>true</italic>
+               <pointsize>10</pointsize>
               </font>
              </property>
              <property name="text">
@@ -638,32 +596,38 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_11">
-             <property name="text">
-              <string>Center</string>
-             </property>
-            </widget>
-           </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_9">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
              <property name="text">
               <string>Vec</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="2">
-            <spacer name="horizontalSpacer_4">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
+           <item row="2" column="1">
+            <widget class="QVecInput" name="Evec">
+             <property name="maximumSize">
               <size>
-               <width>40</width>
-               <height>20</height>
+               <width>200</width>
+               <height>16777215</height>
               </size>
              </property>
-            </spacer>
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
